# WhaleProject

./: .gitignore  CMakeLists.txt  NoFindInCpprefernce.md  README.md  WhaleConfig.cmake  WhaleConfig.cmake.in
Test/: AndroidManifest.xml  CMakeLists.txt  NDKRun.bat  NDKTest.cpp  main.cpp
Test/BuildWhaleCMake/: CMakeLists.txt  main.cpp
Test/ConsoleTest/: CMakeLists.txt  CommandManager.cpp  CommandManager.hpp  Hello.asm  Hello.h  main.cpp
Test/ConsoleTest/Data/: data.json
Test/ConsoleTest/Resources/: data.json
Test/Resources/: code.cs  test.hlsl
Test/Win32Test/: CMakeLists.txt  main.cpp
Test/Win32Test/Data/: data.json  test.hlsl
Test/Win32Test/Resources/: Resources.h  Resources.rc  data.json
Whale/: CMakeLists.txt  Whale.txt
Whale/Core/: CMakeLists.txt  Config  Exception.cpp  Exception.hpp  FCString.cpp  FCString.hpp  FConsole.cpp  FConsole.hpp  FCore.cpp  FDebug.cpp  FDebug.hpp  FIntrinsics.hpp  FLocale.cpp  FLocale.hpp  FSourceLocation.hpp  FTArray.cpp  FTArray.hpp  FTInitializerList.hpp  FTString.hpp  FTypeDef.cpp  FTypeDef.hpp  FUndefinedData.cpp  FUndefinedData.hpp  IGoodAndBad.cpp  IGoodAndBad.hpp  IO.cpp  IO.hpp  IO.inl  Memory.hpp  Memory.inl  SourceLocation.hpp  Stream.hpp  TFConsole.cpp  TFConsole.hpp  TFFunction.hpp  TFMath.hpp  TFTimer.cpp  TFTimer.hpp  TMath.hpp  TTimer.hpp  (+11 more)
Whale/Core/Container/: FMemory.cpp  FMemory.hpp  FMemory.inl  FTArray.hpp  FTString.cpp  FTString.hpp  FTUniquePtr.cpp  FTUniquePtr.hpp  HMemory.cpp  HMemory.hpp  HMemory.inl  InitList.cpp  InitList.hpp  StringStream.cpp  StringStream.hpp  TFAllocator.hpp  TFAllocator.inl  TFArray.hpp  TFMap.hpp  TFPair.cpp  TFPair.hpp  TFString.hpp  TFTree.cpp  TFTree.hpp
Whale/Core/Debug/: FDebug.cpp  FDebug.hpp
Whale/Core/FException/: FException.cpp  FException.hpp
Whale/Core/Object/: WObject.cpp  WObject.hpp  WProgram.cpp  WProgram.hpp
Whale/Core/Reflect/: FReflect.cpp  FReflect.hpp  WType.cpp  WType.hpp
Whale/Core/Tool/: FCRT.hpp  FCString.cpp  FCString.hpp  FIntrinsics.cpp  FIntrinsics.hpp  FSourceLocation.cpp  FSourceLocation.hpp  FTInitializerList.cpp  FTypeDef.cpp  FTypeDef.hpp  HTypeDef.cpp  HTypeDef.hpp  TFTimer.hpp  TTimer.cpp  TTimer.hpp  WLocale.cpp  WLocale.hpp
Whale/Core/Whale/: CRT.hpp  Exception.hpp  FCString.hpp  FCore.cpp  FCore.hpp  FDebug.cpp  FDebug.hpp  FIntrinsics.hpp  FLocale.cpp  FLocale.hpp  FMath.cpp  FMath.hpp  IGoodAndBad.hpp  IO.hpp  IO.inl  Memory.cpp  Memory.hpp  Memory.inl  SourceLocation.cpp  SourceLocation.hpp  Stream.cpp  Stream.hpp  TFConsole.hpp  TFEvent.cpp  TFEvent.hpp  TFFunction.cpp  TFFunction.hpp  TFMath.cpp  TFMath.hpp  TFTimer.hpp  TypeDef.cpp  TypeDef.hpp  TypeInfo.cpp  TypeInfo.hpp  Utility.hpp  WAction.cpp  WAction.hpp  WObject.cpp  WObject.hpp  XMemory.cpp  (+1 more)
Whale/DirectX/: FDirectXHeader.hpp  FDirectXResult.cpp  FDirectXResult.hpp  WBitmapDirectX12Data.hpp  WDirectX12Data.hpp  WRendererDirectX.cpp  WRendererDirectX.hpp  WShaderDirectX12Data.hpp  WStaticMeshDirectX12Data.hpp  WWindowRenderTargetDirectX12Data.hpp
Whale/Help/: .xml
Whale/IO/: IO.hpp  IO.inl
Whale/Language/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.hpp  CMakeLists.txt  Config  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  TILexer.hpp  TIParser.cpp  TIParser.hpp  Token.hpp
Whale/Language/Json/: FJson.cpp  FJson.hpp  Lexer.cpp  Lexer.hpp  TFValue.cpp  TFValue.hpp  TFValue.inl
Whale/Language/Whale/: AbstractSyntaxTree.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  TILexer.cpp  TILexer.hpp  TIParser.hpp  Token.cpp  Token.hpp
Whale/OpenGL/: FOpenGLHeader.hpp  WRendererOpenGL.cpp  WRendererOpenGL.hpp
Whale/Platform/: CMakeLists.txt  Config  FApplication.cpp  FApplication.hpp  TIGPUResource.cpp  TIGPUResource.hpp  WBitmap.hpp  WImage.cpp  WImage.hpp  WInputSystem.cpp  WInputSystem.hpp  WMaterial.cpp  WMaterial.hpp  WProgram.cpp  WProgram.hpp  WRenderObject.cpp  WRenderObject.hpp  WRenderTarget.hpp  WRenderer.cpp  WRenderer.hpp  WRenderingPipeline.hpp  WShader.cpp  WShader.hpp  WStaticMesh.hpp  WWindow.hpp  WWindowRenderTarget.hpp  WhaleMain.hpp
Whale/Platform/DirectX/: FWICForDirectX.cpp  FWICForDirectX.hpp  HDirectXHeader.cpp  HDirectXHeader.hpp  WBitmapDirectX.cpp  WBitmapDirectX.hpp  WCommandListDirectX.cpp  WCommandListDirectX.hpp  WMaterialDirectX.cpp  WMaterialDirectX.hpp  WRendererDirectX.cpp  WRendererDirectX.hpp  WRenderingPipelineDirectX.cpp  WRenderingPipelineDirectX.hpp  WShaderDirectX.cpp  WShaderDirectX.hpp  WStaticMeshDirectX.cpp  WStaticMeshDirectX.hpp  WWICForDirectX.cpp  WWICForDirectX.hpp  WWindowRenderTargetDirectX.cpp  WWindowRenderTargetDirectX.hpp
Whale/Platform/OpenGL/: HOpenGLHeader.hpp  WRendererOpenGL.cpp  WRendererOpenGL.hpp
Whale/Platform/Whale/: AutoPlatform.cpp  AutoPlatform.hpp  FApplication.cpp  FApplication.hpp  FDebug.cpp  FDebug.hpp  FPlatformManager.cpp  FPlatformManager.hpp  WGenericFile.cpp  WGenericFile.hpp  WGenericFileFinder.cpp  WGenericFileFinder.hpp  WGenericFileManager.cpp  WGenericFileManager.hpp  WGenericLocale.cpp  WGenericLocale.hpp  WGenericPlatform.cpp  WGenericPlatform.hpp  WGenericTime.cpp  WGenericTime.hpp  WGenericTimer.cpp  WGenericTimer.hpp  WGenericWindow.cpp  WGenericWindow.hpp  WGenericWindowClass.cpp  WGenericWindowClass.hpp  WGenericWindowManager.cpp  WGenericWindowManager.hpp  WInputSystem.cpp  WInputSystem.hpp  WProgram.cpp  WProgram.hpp  WWindow.cpp  WWindow.hpp  WhaleMain.hpp
Whale/Platform/Win32/: FCore.cpp  FCore.hpp  FFile.hpp  FPE.cpp  FPE.hpp  FResult.cpp  FResult.hpp  HWinDef.hpp  WDragQueryFileReader.cpp  WDragQueryFileReader.hpp  WWindow.cpp  WWindow.hpp  WinMain.hpp
Whale/Render/: CMakeLists.txt  Config  WBitmap.cpp  WBitmap.hpp  WRenderObject.hpp  WRenderTarget.cpp  WRenderTarget.hpp  WRenderer.cpp  WRenderer.hpp  WShader.cpp  WShader.hpp  WStaticMesh.cpp  WStaticMesh.hpp
Whale/Render/Utility/: WBitmap.hpp  (+8 more)
Whale/Tool/: CMakeLists.txt  Config  Core.cpp  Core.hpp  IEnable.cpp  IEnable.hpp
Whale/UML/: Config  Whale.doc  Whale.mdj
Whale/Win32/: FCore.cpp  FCore.hpp  FMessageBox.hpp  FWinDef.hpp  FWinMain.hpp  WWindow.cpp  WWindow.hpp
Whale/World/: WWorld.cpp  WWorld.hpp
(+182 files in other folders)
